--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,69 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  background-color: #e5e7eb;
-  /* background-color: black; */
+
+:root {
+  --primary-color: #551B8A;
+  --secondary-color: #FF007F;
+  --tertiary-color: #470FF4;
+  --primary-focus-color: #7e22ce;
+  --primary-light-color: #8b5cf6;
+  --light-color: #ffffff;
+  --grey-color: #bec4d1;
+  --dark-background: #0c1220;
+  --dark-color: #181f2f;
 }
+
+/* Dark mode root */
+:root.dark {
+	--card-color: var(--dark-color);
+	--text-color: var(--light-color);
+	--border-color: var(--grey-color);
+	--background-color: var(--dark-background);
+	--background-focus-color: var(--dark-color);
+}
+
+/* TODO build a color switch */
+:root.light {
+	--card-color: var(--light-color);
+	--text-color: var(--light-color);
+	--border-color: var(--grey-color);
+	--background-color: var(--dark-background);
+	--background-focus-color: var(--dark-color);
+}
+
+html {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+/* Select */
+select, input, input[type=text], input[type=number] {
+  background-color: var(--background-focus-color);
+  color: var(--text-color);
+  border: 1px solid var(--border-color);
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+}
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: var(--primary-color) var(--background-focus-color);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--dark-color);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--primary-focus-color);
+    border-radius: 15px;
+    border: 3px solid var(--dark-color);
+  }
