--- a/src/app.css
+++ b/src/app.css
@@ -10,6 +10,16 @@ html {
 	color: var(--text-color);
 }
 
+html,
+body {
+	width: 100%;
+	height: 100%;
+}
+
+* {
+	box-sizing: border-box;
+}
+
 /* Select */
 select,
 input[type='text'],
@@ -19,6 +29,21 @@ input[type='number'] {
 	border: 1px solid var(--border-color);
 	border-radius: 0.25rem;
 	padding: 0.5rem;
+}
+
+/* feut theme */
+*.feut {
+	/* filter: saturate(3) brightness(1.5) contrast(1.5); */
+	background-image: url('/src/lib/assets/feutenachtergrond.webp');
+}
+
+.feut * {
+	/* comic sans everything */
+	font-family: 'Comic Sans MS', 'Comic Sans', cursive !important;
+}
+
+.feut img.logo {
+	content: url('/src/lib/assets/ibsbasis.png');
 }
 
 /* ===== Scrollbar CSS ===== */
