--- a/src/style/typography.css
+++ b/src/style/typography.css
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Archivo Black', sans-serif !important;
+	/* font-family: 'Archivo Black', sans-serif !important; */
 	font-weight: 400 !important;
 }
 
@@ -24,6 +24,6 @@ input,
 textarea,
 select,
 button {
-	font-family: 'Varela Round', sans-serif !important;
-	font-weight: 400;
+	/* font-family: 'Varela Round', sans-serif !important; */
+	/* font-weight: 400; */
 }
