--- a/src/app.css
+++ b/src/app.css
@@ -5,14 +5,10 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-	/* Red outline */
-	/* outline: 1px solid red; */
-}
-
 html {
 	background-color: var(--background-color);
 	color: var(--text-color);
+	overflow: hidden;
 }
 
 html,
