style: Add default hr and h1

--- a/src/style/colors.css
+++ b/src/style/colors.css
@@ -2,6 +2,7 @@
 	--primary-color: #551b8a;
 	--secondary-color: #ff007f;
 	--tertiary-color: #470ff4;
+	--error-color: red;
 	--primary-focus-color: #7e22ce;
 	--primary-light-color: #8b5cf6;
 	--light-color: #ffffff;
