--- a/src/style/typography.css
+++ b/src/style/typography.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Varela+Round&display=swap');
-/* font-family: 'Archivo Black', sans-serif;
-font-family: 'Varela Round', sans-serif; */
 
 h1,
 h2,
@@ -8,12 +5,27 @@ h3,
 h4,
 h5,
 h6 {
-	/* font-family: 'Archivo Black', sans-serif !important; */
 	font-weight: 400 !important;
 }
 
+h1 {
+	font-size: 1.5rem !important;
+}
+
+h2 {
+	font-size: 1.25rem !important;
+}
+
+h3 {
+	font-size: 1.125rem !important;
+}
+
+a:hover, button:hover {
+	text-decoration: underline;
+}
+
 /* Other text */
-p,
+/* p,
 span,
 a,
 li,
@@ -26,4 +38,4 @@ select,
 button {
 	/* font-family: 'Varela Round', sans-serif !important; */
 	/* font-weight: 400; */
-}
+/* } */
