--- a/src/style/typography.css
+++ b/src/style/typography.css
@@ -24,6 +24,27 @@ a:hover, button:hover {
 	text-decoration: underline;
 }
 
+kbd {
+	background-color: #eee;
+	border-radius: 3px;
+	border: 1px solid #b4b4b4;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
+	color: #333;
+	display: inline-block;
+	font-weight: 700;
+	line-height: 1;
+	padding: 2px 4px;
+	white-space: nowrap;
+}
+
+code {
+	background-color: var(--code-background-color);
+	color: var(--code-text-color);
+	border-radius: 0.3rem;
+	padding: 4px 5px 5px;
+	white-space: nowrap;
+}
+
 /* Other text */
 /* p,
 span,
