--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -1,16 +1,17 @@
 table {
-  width: 100%;
-  display: table; 
-  border-collapse: collapse;
+	width: 100%;
+	display: table;
+	border-collapse: collapse;
 }
 
-th, td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #ddd;
-  text-align: center;
+th,
+td {
+	padding: 8px;
+	text-align: left;
+	border-bottom: 1px solid #ddd;
+	text-align: center;
 }
 
 th {
-  font-weight: bold;
+	font-weight: bold;
 }
