style: fix img size on some clients (Outlook :(( )

--- a/emails/content.pug
+++ b/emails/content.pug
@@ -2,8 +2,8 @@ extends ./base.pug
 
 block container
   block header
-    div(style='text-align:center; margin-top:32px;')
-      img(src=logo alt="Invictus Bier Systeem" style='width:100%;max-width:342px;')
+    div(style='text-align:center; margin-top:32px; width:100%')
+      img(src=logo alt="Invictus Bier Systeem" width="342" style='width:342px;')
 
     p.
       Beste #{name},
