style: Add gaps to navbar

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -82,6 +82,16 @@ hr.hr-light {
 	box-shadow: 0 0 1rem 0 var(--color-box-shadow);
 }
 
+.layout--navbar--item {
+	padding: var(--navbar-gap) 2rem;
+	border-radius: var(--border-radius);
+}
+
+.layout--navbar--item:hover {
+	background-color: var(--color-primary);
+	color: var(--color-text-light);
+}
+
 .layout--topbar {
 	z-index: 10;
 	grid-area: top;
