--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -49,9 +49,10 @@
 	/*
 		Layout
 	*/
-	--navbar-width: 200px;
+	--navbar-width: 300px;
 	--navbar-padding: 1rem;
 	--navbar-margin: 1rem;
+	--navbar-gap: 1rem;
 	--topbar-height: 50px;
 	--container-padding: 1rem;
 	--layout-gap: 2rem;
