style: replace fonts

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,22 +4,8 @@
 @use './style/components/button';
 @use './style/components/table';
 @use './style/components/form';
-
-// Open Sans
-// @font-face {
-// 	font-family: 'Open Sans';
-// 	font-style: normal;
-// 	font-weight: 400;
-// 	src: local('Open Sans') local('OpenSans') url('/fonts/OpenSans.ttf');
-// }
-
-// // Open Sans Italic
-// @font-face {
-// 	font-family: 'Open Sans';
-// 	font-style: italic;
-// 	font-weight: 400;
-// 	src: local('Open Sans') local('OpenSans') url('/fonts/OpenSans-Italic.ttf');
-// }
+@use './style/components/hr';
+@use './style/components/card';
 
 html {
 	padding: 0;
@@ -30,5 +16,5 @@ html,
 body {
 	width: 100%;
 	height: 100%;
-	font-family: var(--font-family);
+	font-family: var(--font-family-text);
 }
