--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -9,6 +9,7 @@ h4,
 h5,
 h6 {
 	font-weight: 500;
+	font-family: var(--font-family);
 }
 
 h1 {
@@ -21,6 +22,11 @@ h2 {
 
 h3 {
 	font-size: 1.125rem;
+}
+
+p,
+a {
+	font-family: var(--font-family-text);
 }
 
 a {
