--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -36,6 +36,8 @@
 		Font
 	*/
 	--font-family: 'Ubuntu', sans-serif;
+	--font-family-text: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+		Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
 	--icon-vertical-align: -0.25em;
 	--icon-size: 20px;
 
