--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,23 +1,3 @@
-hr {
-	margin: 0.5rem;
-	border: none;
-	border-top: 1px solid var(--color-hr);
-}
-
-hr.hr-light {
-	border-top: 1px solid var(--color-hr-light);
-}
-
-.ibs-card {
-	width: auto;
-	height: auto;
-
-	background-color: var(--color-card);
-	border-radius: var(--border-radius);
-	box-shadow: 0 0 0.5rem 0 var(--color-shadow);
-	padding: 2rem;
-}
-
 .layout--main {
 	position: relative;
 	width: 100vw;
@@ -73,13 +53,16 @@ hr.hr-light {
 	height: calc(100vh - 2 * var(--navbar-margin) - 2 * var(--navbar-padding));
 	width: var(--navbar-width);
 	background-color: var(--color-bg);
-	color: var(--color-text);
 
 	border-radius: var(--border-radius);
 	margin: var(--navbar-margin);
 	padding: var(--navbar-padding);
 
 	box-shadow: 0 0 1rem 0 var(--color-box-shadow);
+
+	& > a {
+		color: var(--color-text);
+	}
 }
 
 .layout--navbar--item {
@@ -90,6 +73,7 @@ hr.hr-light {
 .layout--navbar--item:hover {
 	background-color: var(--color-primary);
 	color: var(--color-text-light);
+	text-decoration: none;
 }
 
 .layout--topbar {
