style: misc changes

--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -90,7 +90,7 @@
 
 	background-color: var(--color-bg);
 	border-radius: var(--border-radius);
-	overflow-x: hidden;
+	overflow-x: auto;
 	overflow-y: scroll;
 
 	margin-bottom: var(--container-padding);
