--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -25,6 +25,7 @@
 	--color-hr: #e0e0e0;
 	--color-hr-light: #ffffff;
 	--color-card: #ffffff;
+	--color-card-border: var(--color-hr);
 	--color-box-shadow: rgba(0, 0, 0, 0.1);
 
 	--color-form-border: var(--color-hr);
