--- a/src/style/components/_button.scss
+++ b/src/style/components/_button.scss
@@ -20,6 +20,16 @@ button {
 	background-color: var(--color-primary);
 }
 
+button.btn-a {
+	all: unset;
+	color: var(--color-primary);
+	cursor: pointer;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
 button.btn-primary {
 	background-color: var(--color-primary);
 }
