--- a/src/style/components/_card.scss
+++ b/src/style/components/_card.scss
@@ -26,6 +26,11 @@
 		padding: 0 0 1rem 1rem;
 	}
 
+	& > .ibs-card--buttons.top {
+		padding: 0;
+		padding-top: 1rem;
+	}
+
 	& > .ibs-card--row {
 		padding: 0.5rem 1rem 0.5rem 1rem;
 		border-top: 1px solid var(--color-card-border);
