style: Add default text font

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -37,8 +37,7 @@
 		Font
 	*/
 	--font-family: 'Ubuntu', sans-serif;
-	--font-family-text: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-		Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif;
+	--font-family-text: SegoeUI, 'Open Sans', sans-serif;
 	--icon-vertical-align: -0.25em;
 	--icon-size: 20px;
 
