--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -6,6 +6,9 @@
 
 	overflow: hidden;
 
+	// Disable reloading on overscroll
+	overscroll-behavior: contain;
+
 	background-color: var(--color-bg-base);
 	scrollbar-color: var(--color-scrollbar) var(--color-bg-base);
 	scrollbar-width: thin;
@@ -48,6 +51,10 @@
 }
 
 .layout--navbar {
+	display: flex;
+	flex-direction: column;
+	text-align: start;
+
 	z-index: 10;
 	grid-area: nav;
 	height: calc(100vh - 2 * var(--navbar-margin) - 2 * var(--navbar-padding));
@@ -58,7 +65,7 @@
 	margin: var(--navbar-margin);
 	padding: var(--navbar-padding);
 
-	box-shadow: 0 0 1rem 0 var(--color-box-shadow);
+	box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
 
 	& > a {
 		color: var(--color-text);
@@ -81,6 +88,10 @@
 	grid-area: top;
 	height: var(--topbar-height);
 	color: var(--color-text-light);
+
+	display: flex;
+	justify-content: space-between;
+	margin: 0.5rem;
 }
 
 .layout--container {
@@ -93,8 +104,101 @@
 	overflow-x: auto;
 	overflow-y: scroll;
 
+	box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+
 	margin-bottom: var(--container-padding);
 	margin-right: var(--container-padding);
 
 	padding: var(--container-padding);
+}
+
+@media (max-width: 600px) {
+	.layout--main {
+		grid-template-areas: 'top' 'main';
+		grid-template-rows: var(--topbar-height) calc(100lvh - var(--topbar-height));
+		grid-template-columns: 1fr;
+
+		margin: 0;
+		padding: 0;
+
+		gap: 0;
+	}
+
+	.layout--toast {
+		bottom: calc(var(--navbar-height) + 8px);
+		right: 8px;
+	}
+
+	.layout--navbar {
+		z-index: 20;
+
+		position: absolute;
+		top: calc(100dvh - var(--navbar-height));
+		left: 0;
+
+		padding: 0;
+		margin: 0;
+
+		height: var(--navbar-height);
+		width: 100vw;
+
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
+
+		box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+
+		& > .layout--navbar--item {
+			// border-radius: var(--border-radius);
+			border-bottom-left-radius: 0px;
+			border-bottom-right-radius: 0px;
+		}
+
+		& > .layout--navbar--item > i {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			height: 100%;
+			width: 100%;
+		}
+
+		& > .layout--navbar--item:nth-child(n + 7) {
+			display: none;
+		}
+	}
+
+	.layout--topbar {
+		height: var(--topbar-height);
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin: 0;
+		padding: 0;
+		width: 100%;
+	}
+
+	.layout--container {
+		box-sizing: border-box;
+		padding: 0;
+		margin: 0;
+		max-width: 100lvw;
+		width: 100lvw;
+
+		-ms-overflow-style: none;
+		scrollbar-width: none;
+	}
+
+	.layout--container::-webkit-scrollbar {
+		display: none;
+	}
+
+	.layout--container-slot {
+		box-sizing: border-box;
+		width: 100%;
+
+		padding: var(--container-padding);
+		padding-bottom: var(--navbar-height);
+		margin: 0;
+	}
 }
