--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -28,6 +28,11 @@
 	--color-card-border: var(--color-hr);
 	--color-box-shadow: rgba(0, 0, 0, 0.1);
 
+	--color-table-highlight: var(--color-primary);
+	--color-table-highlight-focus: rgba(85, 27, 138, 0.9);
+	--color-table-stripe: rgba(85, 27, 138, 0.3);
+	--color-table-focus: rgba(0, 0, 0, 0.05);
+
 	--color-form-border: var(--color-hr);
 	--color-form-focus: var(--color-primary);
 
