--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -198,7 +198,7 @@
 		width: 100%;
 
 		padding: var(--container-padding);
-		padding-bottom: var(--navbar-height);
+		padding-bottom: calc(2 * var(--navbar-height));
 		margin: 0;
 	}
 }
