style: Add helper classes and fix table everywhere

--- a/src/style/components/_table.scss
+++ b/src/style/components/_table.scss
@@ -6,6 +6,10 @@ table {
 		table-layout: fixed;
 	}
 
+	&.not-full-width {
+		width: auto;
+	}
+
 	&.striped {
 		tr:nth-child(even) {
 			background-color: var(--color-table-stripe);
