--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -1,3 +1,81 @@
+.center {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.center.column {
+	flex-direction: column;
+}
+
+$steps: 20;
+
+@mixin margin-padding-gen {
+	@for $i from 1 through $steps {
+		.mt-#{$i} {
+			margin-top: #{$i * 0.25}rem;
+		}
+
+		.mb-#{$i} {
+			margin-bottom: #{$i * 0.25}rem;
+		}
+
+		.ml-#{$i} {
+			margin-left: #{$i * 0.25}rem;
+		}
+
+		.mr-#{$i} {
+			margin-right: #{$i * 0.25}rem;
+		}
+
+		.mx-#{$i} {
+			margin-left: #{$i * 0.25}rem;
+			margin-right: #{$i * 0.25}rem;
+		}
+
+		.my-#{$i} {
+			margin-top: #{$i * 0.25}rem;
+			margin-bottom: #{$i * 0.25}rem;
+		}
+
+		.m-#{$i} {
+			margin: #{$i * 0.25}rem;
+		}
+
+		.pt-#{$i} {
+			padding-top: #{$i * 0.25}rem;
+		}
+
+		.pb-#{$i} {
+			padding-bottom: #{$i * 0.25}rem;
+		}
+
+		.pl-#{$i} {
+			padding-left: #{$i * 0.25}rem;
+		}
+
+		.pr-#{$i} {
+			padding-right: #{$i * 0.25}rem;
+		}
+
+		.px-#{$i} {
+			padding-left: #{$i * 0.25}rem;
+			padding-right: #{$i * 0.25}rem;
+		}
+
+		.py-#{$i} {
+			padding-top: #{$i * 0.25}rem;
+			padding-bottom: #{$i * 0.25}rem;
+		}
+
+		.p-#{$i} {
+			padding: #{$i * 0.25}rem;
+		}
+	}
+}
+
+@include margin-padding-gen;
+
 .layout--main {
 	position: relative;
 	width: 100vw;
