style: Add local fonts

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -41,7 +41,7 @@
 	/*
 		Font
 	*/
-	--font-family: 'Ubuntu', sans-serif;
+	--font-family: Ubuntu, sans-serif;
 	--font-family-text: SegoeUI, 'Open Sans', sans-serif;
 	--icon-vertical-align: -0.25em;
 	--icon-size: 20px;
