--- a/src/app.scss
+++ b/src/app.scss
@@ -80,4 +80,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: var(--font-family-text);
+
+	// Disable reloading on overscroll
+	overscroll-behavior: contain;
 }
