feat: Add tooltips

--- a/src/app.scss
+++ b/src/app.scss
@@ -6,6 +6,7 @@
 @use './style/components/form';
 @use './style/components/hr';
 @use './style/components/card';
+@use './style/components/tooltip';
 
 @font-face {
 	font-family: SegoeUI;
