--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -66,12 +66,16 @@
 	--layout-gap: 2rem;
 	--stripe-height: 350px;
 
+	--tooltip-width: 300px;
+
 	@media (max-width: 600px) {
 		--topbar-height: 70px;
 		--topbar-logo-height: 40px;
 		--topbar-logo-width: 150px;
 		--navbar-height: 80px;
 		--topbar-avatar-size: 45px;
+
+		--tooltip-width: 65%;
 	}
 
 	/*
