style: Fix dialogs for mobile

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,6 +7,7 @@
 @use './style/components/hr';
 @use './style/components/card';
 @use './style/components/tooltip';
+@use './style/components/dialog';
 
 @font-face {
 	font-family: SegoeUI;
