style: more form styles

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -35,6 +35,7 @@
 
 	--color-form-border: var(--color-hr);
 	--color-form-focus: var(--color-primary);
+	--color-form-bg: #ffffff;
 
 	--color-scrollbar: var(--color-primary);
 
