--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -50,7 +50,7 @@ form .form-control {
 }
 
 textarea,
-input:not([type='checkbox'], [type='radio'], [type='color']),
+input:not([type='file'], [type='checkbox'], [type='radio'], [type='color']),
 select {
 	all: unset;
 
@@ -68,6 +68,43 @@ select {
 
 	&:focus {
 		outline: none;
+		border: 1px solid var(--color-form-focus);
+		box-shadow: var(--form-box-shadow);
+	}
+}
+
+.input-file {
+	display: grid;
+	justify-content: center;
+	align-content: center;
+
+	width: 100%;
+	box-sizing: border-box;
+
+	input {
+		visibility: hidden;
+	}
+
+	& .no-file {
+		width: 100%;
+		box-sizing: border-box;
+		cursor: pointer;
+		label {
+			cursor: pointer;
+			color: var(--color-primary);
+		}
+
+		label:hover {
+			text-decoration: underline;
+		}
+	}
+
+	& .has-file {
+		width: 100%;
+		box-sizing: border-box;
+	}
+
+	&:focus {
 		border: 1px solid var(--color-form-focus);
 		box-shadow: var(--form-box-shadow);
 	}
@@ -100,16 +137,14 @@ input[type='radio'] {
 	}
 }
 
-input[type='file'] {
-	display: inline-block;
-	position: absolute;
-	z-index: 1;
-	width: 100%;
-	height: 50px;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	cursor: pointer;
+input[type='range'] {
+	background-color: var(--color-form-bg);
+
+	&::-webkit-slider-thumb,
+	&::-moz-range-thumb {
+		background-color: var(--color-secondary);
+		border: none;
+	}
 }
 
 dialog {
