style: fix email send page

--- a/src/style/components/_form.scss
+++ b/src/style/components/_form.scss
@@ -167,5 +167,11 @@ dialog {
 				margin-bottom: 0.25rem;
 			}
 		}
+
+		select {
+			max-width: 100%;
+			width: 100%;
+			box-sizing: border-box;
+		}
 	}
 }
