Misc: Add profile-icon

--- a/src/app.scss
+++ b/src/app.scss
@@ -8,6 +8,7 @@
 @use './style/components/card';
 @use './style/components/tooltip';
 @use './style/components/dialog';
+@use './style/components/profile-icon';
 
 @font-face {
 	font-family: SegoeUI;
