--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -289,6 +289,7 @@ $steps: 20;
 	.layout--container-slot {
 		box-sizing: border-box;
 		width: 100%;
+		min-height: 100%;
 
 		padding: var(--container-padding);
 		padding-bottom: calc(2 * var(--navbar-height));
