--- a/src/style/components/_profile-icon.scss
+++ b/src/style/components/_profile-icon.scss
@@ -22,5 +22,9 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+
+		&.image-loaded::before {
+			content: none;
+		}
 	}
 }
