feat: Upload photos

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,7 @@
 @use './style/components/tooltip';
 @use './style/components/dialog';
 @use './style/components/profile-icon';
+@use './style/components/chip';
 
 @font-face {
 	font-family: SegoeUI;
