todo: Start working on comments

--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,7 @@
 @use './style/components/dialog';
 @use './style/components/profile-icon';
 @use './style/components/chip';
+@use './style/components/comment';
 
 @font-face {
 	font-family: SegoeUI;
