style: foto/[id] mobile view!

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -31,6 +31,8 @@
 
 	--color-chip-bg: #dfdfdf;
 
+	--color-comment-bg: #efdeff;
+
 	--color-table-highlight: var(--color-primary);
 	--color-table-highlight-focus: rgba(85, 27, 138, 0.9);
 	--color-table-stripe: rgba(85, 27, 138, 0.2);
