--- a/src/style/_layout.scss
+++ b/src/style/_layout.scss
@@ -157,17 +157,17 @@ $steps: 20;
 	& > a {
 		color: var(--color-text);
 	}
-}
 
-.layout--navbar--item {
-	padding: var(--navbar-gap) 2rem;
-	border-radius: var(--border-radius);
-}
+	&--item {
+		padding: var(--navbar-gap) 2rem;
+		border-radius: var(--border-radius);
+	}
 
-.layout--navbar--item:hover {
-	background-color: var(--color-primary);
-	color: var(--color-text-light);
-	text-decoration: none;
+	&--item:hover {
+		background-color: var(--color-primary);
+		color: var(--color-text-light);
+		text-decoration: none;
+	}
 }
 
 .layout--topbar {
@@ -200,6 +200,8 @@ $steps: 20;
 }
 
 @media (max-width: 600px) {
+	$nav-items: 5;
+
 	.layout--main {
 		grid-template-areas: 'top' 'main';
 		grid-template-rows: var(--topbar-height) calc(100lvh - var(--topbar-height));
@@ -232,13 +234,15 @@ $steps: 20;
 		width: 100vw;
 
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
+		grid-template-columns: repeat($nav-items, 1fr);
 
 		box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
 
 		& > .layout--navbar--item {
 			border-bottom-left-radius: 0px;
 			border-bottom-right-radius: 0px;
+
+			width: calc(100vw / 5);
 		}
 
 		& > .layout--navbar--item > i {
@@ -251,7 +255,7 @@ $steps: 20;
 			width: 100%;
 		}
 
-		& > .layout--navbar--item:nth-child(n + 7) {
+		& > .layout--navbar--item:nth-child(n + 8) {
 			display: none;
 		}
 	}
