--- a/src/style/components/_table.scss
+++ b/src/style/components/_table.scss
@@ -11,7 +11,7 @@ table {
 	}
 
 	&.striped {
-		tr:nth-child(even) {
+		tr:nth-child(even):not(.highlight) {
 			background-color: var(--color-table-stripe);
 		}
 	}
